# Trading-Backtester

./: .gitignore  CLAUDE.md  download_data.sh  pull_data_gcp.sh  sync_data.sh  sync_data_gcp.sh  test.sh
modules/analysis/: README.md  analysis-architecture.html  pyproject.toml  rulebook.md
modules/analysis/examples/schwab/: schwab_orders.csv
modules/analysis/order-data/: orders.csv  plot.html
modules/analysis/order-data/schwab/: schwab_orders_converted.csv
modules/analysis/src/trading_analysis/: __init__.py  parse_orders.py
modules/analysis/src/trading_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
modules/data-pipeline/: ARCHITECTURE.md  README.md  data-pipeline-architecture.html  pyproject.toml
modules/data-pipeline/config/: download.json
modules/data-pipeline/config/watchlists/: debug.csv  primary.csv
modules/data-pipeline/data/1440/: AAL-1440M.csv  AAON-1440M.csv  GLD-1440M.csv  TSLA-1440M.csv  post_process.sh
modules/data-pipeline/data/VIX/: convert_vix_history.py
modules/data-pipeline/src/trading_data_pipeline/: __init__.py  bigquery_pull.py  bigquery_sync.py  cli.py  coinmarketcap_downloader.py  config.py  downloader.py  fisher_adaptive_macd.py  strategy_metrics.py  (+1 more)
modules/data-pipeline/src/trading_data_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
modules/data-pipeline/tests/: __init__.py  conftest.py  test_bigquery_pull.py  test_cli.py  test_coinmarketcap_downloader.py  test_download_data_sh.py  test_downloader.py  test_fisher_adaptive_macd.py  test_visualize.py
(+79 files in other folders)
