[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-analysis"
version = "0.1.0"
description = "Utilities for parsing and analyzing broker order exports."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Trading Systems" }]
dependencies = [
  "plotly>=5.24",
  "asciichart>=1.5",
]

[project.scripts]
trading-parse-orders = "trading_analysis.parse_orders:main"
trading-schwab-convert = "trading_analysis.schwab.convert:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_analysis"]
